typescript/checker/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts.stderr
error: TS1166 {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            67,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts:4:5
  |
4 | /     [e] = 0
5 | |     [e2] = 1
  | |____________^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            47,
        ),
        hi: BytePos(
            48,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts:4:6
  |
4 |     [e] = 0
  |      ^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            62,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName25.ts:5:6
  |
5 |     [e2] = 1
  |      ^^

